:sparkles: feat(improvements): general breaking features
- Introduced Circuit-breaker endpoint strategy with default fallback.
- Mocked external REST Token API service.
- Added Spotless, PMD code quality libs & OpenAPI/Swagger support.
- Modified persistency model concerns into dedicated Entities.